# gl_boilerplate

./: CMakeLists.txt  main.c
assets/: cube.fbx
lib/: glew32s.lib
